intel/bench_214_new/extr_.reactosdll3rdpartydxtntxc_compress_dxtn.c_storedxtencodedblock_with_main/log.txt
bench_214_new/extr_.reactosdll3rdpartydxtntxc_compress_dxtn.c_storedxtencodedblock_with_main/extr_.reactosdll3rdpartydxtntxc_compress_dxtn.c_storedxtencodedblock_with_main.c:151:13: error: expected expression
  GLubyte (*)[4][4] srccolors;
            ^
bench_214_new/extr_.reactosdll3rdpartydxtntxc_compress_dxtn.c_storedxtencodedblock_with_main/extr_.reactosdll3rdpartydxtntxc_compress_dxtn.c_storedxtencodedblock_with_main.c:157:33: error: use of undeclared identifier 'srccolors'
  storedxtencodedblock(blkaddr, srccolors, bestcolor, numxpixels, numypixels, type, haveAlpha);
                                ^
2 errors generated.
HLS FPGA Parse FAILED.
